--- a/app/assets/stylesheets/user.css.scss
+++ b/app/assets/stylesheets/user.css.scss
@@ -3,19 +3,14 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
-//Global 
-$bottom: bottom;
-$top: top;
-$spacing: 30px;
-
 
 div,main,input{ 
   outline: none !important;
 }
 
-.columns { 
-  padding-left: 0px !important; 
-  padding-right: 0px !important;
+.no-padding { 
+  padding-left: 0px; 
+  padding-right: 0px;
 }
 
 *:focus {
@@ -160,7 +155,7 @@ button {
 
 .ui-slider-handle { 
   background: image_url('slider-button.png') !important;
-  width: 28px !important ;
+  width: 28px !important;
   border: none !important;
   height: 30px !important;
   margin-top: -4px !important;
@@ -309,8 +304,6 @@ button {
   cursor: pointer;
   display: inline-block;
   margin-left: 315px;
-  /* margin-top: -10px; */
-  /* margin-bottom: 7px; */
   position: absolute;
   bottom: 190px;
   z-index: 3;
@@ -515,10 +508,7 @@ button {
   text-align: center; 
   position:relative; 
   top: 35%;
-}
-
-.centered-body2 { 
-
+  margin-left: 8px;
 }
 
 .overlay-text { 
@@ -792,7 +782,7 @@ button {
 
 .inner_panel {
   margin: auto;
-  overflow:hidden
+  overflow:hidden;
 }
 
 p.white-text { 
